<resources>
    <string name="app_name">Instagram Photo &amp; Video Downloader</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paste_link">Paste Link</string>
    <string name="load_photo">Load Photo</string>
    <string name="download">Download</string>
    <string name="enter_url">Enter Url</string>
    <string name="load_reel">Load Reel</string>
    <string name="load_video">Load Video</string>
    <string name="enter_username">Enter Username</string>
</resources>