<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.VideoFragment">

    <EditText
        android:id="@+id/et_video"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_style"
        android:hint="@string/enter_url"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="48dp"
        android:scrollHorizontally="true"
        android:textColor="@color/white"
        android:textColorHint="#a0a0a0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_cancel_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_cancel"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/et_video"
        app:layout_constraintEnd_toEndOf="@id/et_video"
        app:layout_constraintTop_toTopOf="@id/et_video" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <Button
        android:id="@+id/btn_video_paste_link"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#262626"
        android:fontFamily="@font/arial"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/paste_link"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/gl_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_video" />

    <Button
        android:id="@+id/btn_video_load"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#262626"
        android:fontFamily="@font/arial"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/load_video"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_vertical"
        app:layout_constraintTop_toBottomOf="@id/et_video" />

    <Button
        android:id="@+id/btn_video_download"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#262626"
        android:fontFamily="@font/arial"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/download"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vv_video" />

    <VideoView
        android:id="@+id/vv_video"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btn_video_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_video_load" />


</androidx.constraintlayout.widget.ConstraintLayout>