<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PhotoFragment">

    <EditText
        android:id="@+id/et_photo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/et_bg"
        android:hint="@string/enter_url"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="48dp"
        android:inputType="text"
        android:scrollHorizontally="true"
        android:textColor="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_cancel_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_cancel"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/et_photo"
        app:layout_constraintEnd_toEndOf="@id/et_photo"
        app:layout_constraintTop_toTopOf="@id/et_photo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_photo_paste_link"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="?attr/buttonTint"
        android:fontFamily="@font/arial"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/paste_link"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toStartOf="@id/gl_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_photo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_photo_load"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="?attr/buttonTint"
        android:fontFamily="@font/arial"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/load_photo"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_vertical"
        app:layout_constraintTop_toBottomOf="@id/et_photo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_photo_download"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="?attr/buttonTint"
        android:fontFamily="@font/arial"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/download"
        android:textAllCaps="false"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_photo" />

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btn_photo_download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_photo_load" />

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/iv_photo"
        app:layout_constraintEnd_toEndOf="@id/iv_photo"
        app:layout_constraintStart_toStartOf="@id/iv_photo"
        app:layout_constraintTop_toTopOf="@id/iv_photo" />


</androidx.constraintlayout.widget.ConstraintLayout>